all part are done, unconnect

--- a/pro/src/pug/data.pug
+++ b/pro/src/pug/data.pug
@@ -279,15 +279,6 @@
         classes:{partInList:'part-team-service', icon:'icon-tuanduijiaojie hexagon-grey', iconDesc:{iTitle:'', number:''}, title:'list-title-service', subTitle:'', info:'linfo-service', desc:'', other:''},
         datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'团队交接', subTitle:'', info:'项目交接时，您将得到专属的专业化流程、优质的服务、丰富的经验以及对创意品质的追求核心团队。', desc:[], other:''}
     }
-//-团队孵化 - 合作方式
-    var list30 = {
-        classes:{partInList:'part-team-cooper', icon:'icon-jishutouzi float-l', iconDesc:{iTitle:'', number:''}, title:'list-title-team-cooper', subTitle:'listSubTitle', info:'linfo-team-cooper', desc:'', other:''},
-        datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'技术投资', subTitle:'Technology Investment', info:'为符合技天使发展方向的项⽬提供技术投资服务 。', desc:[], other:''}
-    }   
-    var list31 = {
-        classes:{partInList:'part-team-cooper', icon:'icon-jishutouzi float-l', iconDesc:{iTitle:'', number:''}, title:'list-title-team-cooper', subTitle:'listSubTitle', info:'linfo-team-cooper', desc:'', other:''},
-        datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'技术投资', subTitle:'Technology Investment', info:'为符合技天使发展方向的项⽬提供技术投资服务 。', desc:[], other:''}
-    }
 
 
 //- 技术研发 - h5 -优势
@@ -540,6 +531,7 @@
 //-详细流程
 -
     var  list100 = {
+        style:'margin-150',
         left:{
             classes:{partInList:'part-details', icon:'icon-jishuhehuoren2', iconDesc:{style:'',iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:'', other:''},
             datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:[], other:''}
@@ -555,16 +547,236 @@
     }
 
     var  list101 = {
+        style:'',
         right:{
+            style:'',
+            classes:{partInList:'part-details', icon:'icon-jishuhehuoren2 icon-r', iconDesc:{style:'',iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        middle:{
+            classes:{partInList:'part-details', icon:'', iconDesc:{style:'icon-details-bg icon-details-bg-r ',iTitle:'iTitle-details', number:'icon-number-details'}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'产品规划', number:'02'}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        left:{
+            classes:{partInList:'part-details bg-purple-red bg-setting bg-l ', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'list-title-details word-l padding-left-50', subTitle:'', info:'', desc:'desc-details word-l', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'产品规划：“为用户多想一点“ ', subTitle:'', info:'', desc:['· 原型设计 原型确认','· UI设计 UI确认'], other:''}
+        }
+    }
+
+        var  list102 = {
+        style:'margin-150',
+        left:{
+            classes:{partInList:'part-details', icon:'icon-jishuhehuoren2', iconDesc:{style:'',iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        middle:{
+            classes:{partInList:'part-details', icon:'', iconDesc:{style:'icon-details-bg margin-right-5',iTitle:'iTitle-details', number:'icon-number-details'}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'程序开发', number:'03'}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        right:{
+            classes:{partInList:'part-details bg-purple-blue bg-setting bg-r', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'list-title-details', subTitle:'', info:'', desc:'desc-details', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'程序开发：“细心码好每段代码” ', subTitle:'', info:'', desc:['· 系统设计 程序开发','· 程序确认 多平台开发'], other:''}
+        }
+    }
+
+    var  list103 = {
+        style:'',
+        right:{
+            style:'',
             classes:{partInList:'part-details', icon:'icon-jishuhehuoren2 icon-r', iconDesc:{style:'',iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:'', other:''},
             datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:[], other:''}
         },
         middle:{
             classes:{partInList:'part-details', icon:'', iconDesc:{style:'icon-details-bg icon-details-bg-r',iTitle:'iTitle-details', number:'icon-number-details'}, title:'', subTitle:'', info:'', desc:'', other:''},
-            datas:{partInList:'', iconDesc:{iTitle:'前期沟通', number:'01'}, title:'', subTitle:'', info:'', desc:[], other:''}
+            datas:{partInList:'', iconDesc:{iTitle:'质量检测', number:'04'}, title:'', subTitle:'', info:'', desc:[], other:''}
         },
         left:{
-            classes:{partInList:'part-details bg-orange bg-setting bg-l ', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'list-title-details word-l', subTitle:'', info:'', desc:'desc-details word-l', other:''},
-            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'沟通碰撞：“不只是接受” ', subTitle:'', info:'', desc:['· 需求调研 方案制作','· 需求确认 签订合约'], other:''}
+            classes:{partInList:'part-details bg-blue-green bg-setting bg-l ', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'list-title-details word-l', subTitle:'', info:'', desc:'desc-details word-l', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'质量检测：“零问题才是宗旨” ', subTitle:'', info:'', desc:['· BUG检测 五重检测','· 用户体验检测 逻辑检测'], other:''}
+        }
+    }
+        var  list104 = {
+        style:'margin-150',
+        left:{
+            classes:{partInList:'part-details', icon:'icon-jishuhehuoren2', iconDesc:{style:'',iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        middle:{
+            classes:{partInList:'part-details', icon:'', iconDesc:{style:'icon-details-bg',iTitle:'iTitle-details', number:'icon-number-details'}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'验收交付', number:'05'}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        right:{
+            classes:{partInList:'part-details bg-green bg-setting bg-r', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'list-title-details', subTitle:'', info:'', desc:'desc-details', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'项目完结：“不止于完美” ', subTitle:'', info:'', desc:['· 确认通过 支付尾款','· 交付源码 成功上线'], other:''}
+        }
+    }
+
+    var  list105 = {
+        style:'',
+        right:{
+            style:'',
+            classes:{partInList:'part-details', icon:'icon-jishuhehuoren2 icon-r', iconDesc:{style:'',iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        middle:{
+            classes:{partInList:'part-details', icon:'', iconDesc:{style:'icon-details-bg icon-details-bg-r',iTitle:'iTitle-details', number:'icon-number-details'}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'售后服务', number:'06'}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        left:{
+            classes:{partInList:'part-details bg-green-oragne bg-setting bg-l ', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'list-title-details word-l', subTitle:'', info:'', desc:'desc-details word-l', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'销售服务：“不止于交付” ', subTitle:'', info:'', desc:['· 售后服务 邮件提交','· 7*24小时电话提交'], other:''}
+        }
+    }
+
+
+
+    //技术团队孵化 -   合作方式
+-
+  var  list200 = {
+        style:'part-team-cooper',
+        left:{
+            classes:{partInList:'', icon:'icon-jishutouzi ', iconDesc:{style:'',iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        middle:{
+            classes:{partInList:'', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        right:{
+            style:'',
+            classes:{partInList:'', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'list-title-team-cooper', subTitle:'list-sub-title-team-cooper margin-bottom-40', info:'info-team-cooper', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'技术投资', subTitle:'Technology Investment', info:'为符合技天使发展方向的项⽬提供技术投资服务 。', desc:[], other:''}
+        }
+    }
+    var  list201 = {
+        style:'part-team-cooper',
+        left:{
+            classes:{partInList:'', icon:'icon-jishuhehuoren2 ', iconDesc:{style:'',iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        middle:{
+            classes:{partInList:'', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        right:{
+            style:'',
+            classes:{partInList:'', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'list-title-team-cooper', subTitle:'list-sub-title-team-cooper ', info:'info-team-cooper', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'技术合伙人', subTitle:'Professional Technology Partner ', info:'为优秀的创业项目提供专业的技术支持。', desc:[], other:''}
+        }
+    }
+
+
+    //首页 - 增值服务
+-
+    var  list300 = {
+        style:'part-increase',
+        hr:'hr-increase',
+        left:{
+            style:'part-increase-left',
+            classes:{partInList:'', icon:'icon-chuangyisheji ', iconDesc:{style:'',iTitle:'iTitle-increase', number:''}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'创意设计', number:''}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        right:{
+            style:'part-increase-right',
+            classes:{partInList:'', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'', subTitle:' ', info:'', desc:'desc-increase', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:['·logo设计','·徽标设计','·图标设计 '], other:''}
+        }
+    }
+    var  list301 = {
+        style:'part-increase',
+        hr:'hr-increase',
+        left:{
+            style:'part-increase-left',
+            classes:{partInList:'', icon:'icon-shangbiaozhuce ', iconDesc:{style:'',iTitle:'iTitle-increase', number:''}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'商标注册', number:''}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        right:{
+            style:'part-increase-right',
+            classes:{partInList:'', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'', subTitle:' ', info:'', desc:'desc-increase', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:['·担保注册','·快速网申'], other:''}
+        }
+    }
+    var  list302 = {
+        style:'part-increase',
+        hr:'hr-increase',
+        left:{
+            style:'part-increase-left',
+            classes:{partInList:'', icon:'icon-shichangtiaocha ', iconDesc:{style:'',iTitle:'iTitle-increase', number:''}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'市场调查', number:''}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        right:{
+            style:'part-increase-right',
+            classes:{partInList:'', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'', subTitle:' ', info:'', desc:'desc-increase', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:['·用户调查','·产品调查','·需求评估','·概念测试'], other:''}
+        }
+    }
+    var  list304 = {
+        style:'part-increase',
+        hr:'hr-increase',
+        left:{
+            style:'part-increase-left',
+            classes:{partInList:'', icon:'icon-chanpinsheji2 ', iconDesc:{style:'',iTitle:'iTitle-increase', number:''}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'产品设计', number:''}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        right:{
+            style:'part-increase-right',
+            classes:{partInList:'', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'', subTitle:' ', info:'', desc:'desc-increase', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:['·UI设计','·原型绘制','·产出demo'], other:''}
+        }
+    }
+    var  list305 = {
+        style:'part-increase',
+        hr:'hr-increase',
+        left:{
+            style:'part-increase-left',
+            classes:{partInList:'', icon:'icon-rongzifuzhu ', iconDesc:{style:'',iTitle:'iTitle-increase', number:''}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'融资辅助', number:''}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        right:{
+            style:'part-increase-right',
+            classes:{partInList:'', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'', subTitle:' ', info:'', desc:'desc-increase', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:['·产品方案','·市场战略','·营销推广','·融资引荐'], other:''}
+        }
+    }
+    var  list306 = {
+        style:'part-increase',
+        hr:'hr-increase',
+        left:{
+            style:'part-increase-left',
+            classes:{partInList:'', icon:'icon-ziyuanzhenghe ', iconDesc:{style:'',iTitle:'iTitle-increase', number:''}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'资源整合', number:''}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        right:{
+            style:'part-increase-right',
+            classes:{partInList:'', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'', subTitle:' ', info:'', desc:'desc-increase', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:['·渠道整合','·投放方案','·跨平台联动'], other:''}
+        }
+    }
+    var  list307 = {
+        style:'part-increase',
+        hr:'hr-increase',
+        left:{
+            style:'part-increase-left',
+            classes:{partInList:'', icon:'icon-yingxiaotuiguang ', iconDesc:{style:'',iTitle:'iTitle-increase', number:''}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'营销推广', number:''}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        right:{
+            style:'part-increase-right',
+            classes:{partInList:'', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'', subTitle:' ', info:'', desc:'desc-increase', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:['·产品包装','·营销方案','·推广投放','·品牌塑造'], other:''}
+        }
+    }
+    var  list308 = {
+        style:'part-increase',
+        hr:'hr-increase',
+        left:{
+            style:'part-increase-left',
+            classes:{partInList:'', icon:'icon-yunyingweihu ', iconDesc:{style:'',iTitle:'iTitle-increase', number:''}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'运营维护', number:''}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        right:{
+            style:'part-increase-right',
+            classes:{partInList:'', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'', subTitle:' ', info:'', desc:'desc-increase', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:['·用户维护','·活动运营','·技术运维','·CRM系统'], other:''}
         }
     }
