--- a/pro/src/pug/index.pug
+++ b/pro/src/pug/index.pug
@@ -136,10 +136,30 @@ body
         +tplListA(list92)
         +tplListA(list93)
 
+    div.grey
+        div(style='width: 815px;margin: 0 auto;')
+            +tplListB(list100)
+            +tplListB(list101)
+            +tplListB(list102)
+            +tplListB(list103)
+            +tplListB(list104)
+            +tplListB(list105)
+    
     div.part
-        +tplListB(list100)
-        +tplListB(list101)
-        
+            +tplListB(list200)
+            +tplListB(list201)
+
+    div.part
+            +tplListC(list300)
+            +tplListC(list301)
+            +tplListC(list302)
+            +tplListC(list304)
+            +tplListC(list305)
+            +tplListC(list306)
+            +tplListC(list307)
+            +tplListC(list308)
+
+    +tplListD
 
 
 
