--- a/pro/src/sass/index_definition.scss
+++ b/pro/src/sass/index_definition.scss
@@ -43,6 +43,8 @@ $partOutProcedureListIconBorder: 3px;
 $partTechAdvWidth: 220px;
 $partTechAdvMargin: (($pageWidth/3) - $partTechAdvWidth)/2;
 
+$circle-far: (350px/2) - (92px/2);
+$circle-closed: 0px - (92px)/2;
 
 
 
