--- a/pro/src/pug/head.pug
+++ b/pro/src/pug/head.pug
@@ -1,4 +1,6 @@
+include public_data.pug
+include definition.pug
 head
     +styleLink("../src/font/iconfont.css")
-    +styleLink("app.css")
+    +styleLink("../app.css")
     
