--- a/pro/src/pug/public_data.pug
+++ b/pro/src/pug/public_data.pug
@@ -1,3 +1,6 @@
+//- 导航栏
+-
+     var navListData = ['首页','外包平台','团队孵化','增值服务','代码市场','合作交流','求贤若渴','一线观察']
 //- 页尾
 -
     var footDatas = [{dir:'all-left',icons:[],desc:{footTitle:'CONTACT',desc1:'地址：广东省广州市天河区中山大道379号 联合社区6栋6313',desc2:'电话：020-29864682',desc3:'邮箱：COO@talkmoney.cn'}}, {dir:'center',icons:['icon-logo','icon-luwei'],desc:{comName:'广州芦苇信息科技有限公司','cp-r1':'copyright © 2016 广州芦苇信息科技有限公司 版权所有','cp-r2':' 粤ICP备16030475号'}}, {dir:'all-right',icons:[],desc:{footTitle:'Link',footSubTitle:'技术研发',desc1:'安卓开发  iOS开发  Html5开发  微信开发  微信小程序',footSubTitle2:'核心服务',desc2:'技术研发  增值服务  团队孵化  代码市场'}}]
