--- a/pro/src/pug/team_data.pug
+++ b/pro/src/pug/team_data.pug
@@ -1,6 +1,6 @@
 //- 技术团队孵化
 -
-    var title_jishutuanduifuhua={classes:{titleDiv:'grey',titleCnt:'padding40',egTitle:'',cnTitle:'',info:'',desc:'paddingBottom23',aList:''}, datas:{egTitle:'',cnTitle:'技术团队孵化',info:'',desc:'从组队、培训、开发到监督，全方位保证你的创意转化，在完成APP项目的同时收获自己专属的团队。',list:['服务内容','合作方式','服务流程']}}
+    var title_jishutuanduifuhua={classes:{titleDiv:'grey',titleCnt:'padding40',egTitle:'',cnTitle:'orange',info:'',desc:'paddingBottom23',aList:''}, datas:{egTitle:'',cnTitle:'技术团队孵化',info:'',desc:'从组队、培训、开发到监督，全方位保证你的创意转化，在完成APP项目的同时收获自己专属的团队。',list:['服务内容','合作方式','服务流程']}}
     var title_fuwuneirong={classes:{titleDiv:'',titleCnt:'',egTitle:'',cnTitle:'',info:'',desc:'',aList:''}, datas:{egTitle:'Service Items',cnTitle:'服务内容',info:'专业的团队保证一流的产品。',desc:'',list:[]}}
     var title_hezuofangshi={classes:{titleDiv:'',titleCnt:'',egTitle:'',cnTitle:'',info:'',desc:'',aList:''}, datas:{egTitle:'Be with us',cnTitle:'合作方式',info:'',desc:'',list:[]}}
 
