--- a/pro/src/pug/index.pug
+++ b/pro/src/pug/index.pug
@@ -1,10 +1,8 @@
-include public_data.pug
 include index_data.pug
-include definition.pug
 include head.pug
 body
     include nav.pug
-    include banner.pug
+    +banner("有关移动互联网外包的大部分需求，你都可以找我们。")
     div.part
         +tplTitle(title_yijianweituokaifa)
         +tplListA(list_yijian_data1)
@@ -16,9 +14,10 @@ body
     div.grey
         div.part
             +tplTitle(title_jishutuanduifuhua)
-            +tplListA(list_jishu_data1)
-            +tplListA(list_jishu_data2)
-            +tplListA(list_jishu_data3)
+            div.be-center
+                +tplListA(list_jishu_data1)
+                +tplListA(list_jishu_data2)
+                +tplListA(list_jishu_data3)
     div.part
         +tplTitle(title_zengzhifuwu)
         +tplListC(list_zengzhi_data1)
